next-app/styles/Main.module.css
.main--bg1 {
  --color-base: #94c5f8;
  --color-grad: 150deg, var(--color-base) 1%, #a6e6ff 70%, #b1b5ea 100%;
  /*fallback for old browsers*/
  background: var(--color-base);  
  /*Chrome 10-25, Safari 5.1-6*/
  background: -webkit-linear-gradient(var(--color-grad));
  /*W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+*/
  background: linear-gradient(var(--color-grad));
}
.main--bg2 {
  --color-base: #071B26;
  --color-grad: 150deg, var(--color-base) 0%, #071B26 30%, #8A3B12 80%, #240E03 100%;
  background: var(--color-base);  
  background: -webkit-linear-gradient(var(--color-grad));
  background: linear-gradient(var(--color-grad));
}
.main--bg3 {
    background: url('/images/pz.jpg');
    background-size: cover;
}

.main__mask {
    width: 100%;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
}
.main__mask--light {
    /*mask over bg to make more subtle*/
    background: rgba(var(--white),0.6);
}
.main__mask--dark {
    /*mask over bg to make more subtle*/
    background: rgba(var(--black),0.7);
}

.row {
    display: flex;
    justify-content: center;
    height: 80%;
    min-width: 60%;
}

.text {
    margin: 0 1em;
    border-width: thin;
    border-color: grey;
    border-style: dashed;
    border-radius: 5px;
    height: 80%;
    width: 60%;
    background: rgba(var(--black),0.01);
    padding: 2em;
    font-family: sans-serif;
    /*cursor: '_'; // doesn't work*/ 
    outline: none;
}
.text--light {
    color: black;
    text-shadow: 0 1px 5px rgba(var(--white), 0.35);
}
.text--dark {
    color: white;
    text-shadow: 0 1px 5px rgba(var(--black), 0.35);
}

.text--typing {
    border-color: transparent;
    background: transparent;
    resize: none;
}
.menu--typing {
    visibility: hidden;
}


.menu {
    align-self: flex-start;
}

.menu__row {
    display: flex;
    justify-content: flex-start;
    align-items: center;
}

.menu__item {
    margin: 0.25em 0.05em;
    border-radius: 100%;
    width: 2em;
    height: 2em;
    /*for centering the icons*/
    display: flex;
    justify-content: center;
    align-items: center;

    font-weight: bold;
}
.menu__item--light {
    background: rgba(var(--black),0.65);
    color: white;
    text-shadow: 0 1px 5px rgba(var(--white), 0.35);
}
.menu__item--dark {
    background: rgba(var(--white),0.65);
    color: black;
    text-shadow: 0 1px 5px rgba(var(--black), 0.35);
}

.menu__row .menu__option {
    visibility: hidden;
}
.menu__row:hover .menu__option {
    visibility: visible;
}

.menu__option {
    font-size: 0.85em;
}
.menu__option--light {
    background: rgba(var(--black),0.45);
}
.menu__option--light:hover:not(.menu__option--selected-light) {
    background: rgba(var(--black),0.25);
}
.menu__option--selected-light {
    background: rgba(var(--black),0.65);
}
.menu__option--dark {
    background: rgba(var(--white),0.45);
}
.menu__option--dark:hover:not(.menu__option--selected-dark) {
    background: rgba(var(--white),0.25);
}
.menu__option--selected-dark {
    background: rgba(var(--white),0.65);
}
.menu__option--sans-serif, .text--sans-serif {
  font-family: sans-serif;
}
.menu__option--serif, .text--serif {
  font-family: serif;
}
.menu__option--script, .text--script {
  font-family: cursive;
}
.menu__option--small, .text--small {
  font-size: small;
}
.menu__option--medium, .text--medium {
 font-size: medium;
}
.menu__option--large, .text--large {
 font-size: x-large;
}

.blinking-cursor {
  --blink: 1s blink step-end;
  --blink-inf: var(--blink) infinite;
  font-weight: 100;
  font-size: 1em;
  -webkit-animation: var(--blink);
  -moz-animation: var(--blink-inf);
  -ms-animation: var(--blink-inf);
  -o-animation: var(--blink-inf);
  animation: var(--blink-inf);
}
@keyframes blink {
    from, to {
        color: transparent;
    }
    50% {
        color: black;
    }
}
@keyframes blink {
    from, to {
        color: transparent;
    }
    50% {
        color: black;
    }
}
@-moz-keyframes blink {
    from, to {
        color: transparent;
    }
    50% {
        color: black;
    }
}

@-webkit-keyframes blink {
    from, to {
        color: transparent;
    }
    50% {
        color: black;
    }
}
@-ms-keyframes blink {
    from, to {
        color: transparent;
    }
    50% {
        color: black;
    }
}
@-o-keyframes blink {
    from, to {
        color: transparent;
    }
    50% {
        color: black;
    }
}

